--- a/Programción.org
+++ b/Programción.org
@@ -1,7 +1,7 @@
 #+title: Programación Lineal
 #+author: Verania Hernández Orgaz 
 #+options: H:2
-
+#+latex_header: \usepackage{listings}
 
 * Teoría
 
@@ -39,12 +39,48 @@ lineales sobre dominios convexos, es decir, sobre regiones dadas por desigualdad
 | Shift y flechas | Selecionar la región        |
 | C-y             | Pegar la region             |
 | Alt y fechas    | Mover renglones de la tabla |
-|                 |                             |
+| C-x-k           | Matar el buffer             |
+*** Org mode 
+| C-c C-c | Corre un bloque de código |
+|         |                           |
 ** Git
 *** Git en la terminal
 *** Github
 ** Python 
 *** El lenguaje Python
+En el lenguaje Python podemos hacer operaciones 
+
+#+begin_src python :session
+2+2
+#+end_src 
+
+#+RESULTS:
+: 4
+
+También podemos usar la biblioteca pulp. Por ejemplo, encontramos el
+máximo de \(-4x+y\) sujeto a \(x+y\leq \frac{1}{2}\)
+#+begin_src python :session
+from pulp import *
+
+x = LpVariable("x", 0, 3)
+
+y = LpVariable("y", 0, 1)
+
+prob = LpProblem("myProblem", LpMinimize)
+
+prob += x + y <= 2
+
+prob += -4*x + y
+
+status=prob.solve()
+
+value(x), value(y), value(prob.objective)
+
+#+end_src 
+
+#+RESULTS:
+| 2.0 | 0.0 | -8.0 |
+
 *** Jupyter
 ** LaTeX 
 
