--- a/dualidad.org
+++ b/dualidad.org
@@ -7,5 +7,18 @@ La dualidad es una manera de asociar un cierto problema de
 programación lineal a cada problema de programación lineal.
 
 * Ejemplos
-
+Consideremos el siguiente problema
+  \begin{equation*}
+   \begin{aligned}
+   \text{Maximizar} \quad & 2x_{1}+3x_{2}\\
+   \text{sujeto a} \quad &
+     \begin{aligned}
+      4x_{1}+8x_{2} &\leq 12\\
+      2x_{1}+x_{2} &\leq 3\\
+      3x_{1}+2x_{2} &\leq 4\\
+      x_{1} &\geq  0\\
+      x_{2} &\geq 0
+     \end{aligned}
+   \end{aligned}
+   \end{equation*}
 * Teoremas 
