Escribí tres pasos

--- a/dualidad.org
+++ b/dualidad.org
@@ -8,6 +8,7 @@ programación lineal a cada problema de programación lineal.
 
 * Ejemplos
 Consideremos el siguiente problema
+
   \begin{equation*}
    \begin{aligned}
    \text{Maximizar} \quad & 2x_{1}+3x_{2}\\
@@ -21,4 +22,12 @@ Consideremos el siguiente problema
      \end{aligned}
    \end{aligned}
    \end{equation*}
+  - Podemos observar que bajo las restriccione la funcion objetico es
+    menor que 12 ya que:
+    \begin{equation*}
+    2x_{1}+3x_{2}\leq 4x_{1}+8x_{2}\leq 12.
+    \end{equation*}
+  - Siguiente paso...
+  - Y el siguiente
+
 * Teoremas 
