Enuciado del teorema

--- a/dualidad.org
+++ b/dualidad.org
@@ -31,3 +31,7 @@ Consideremos el siguiente problema
   - Y el siguiente
 
 * Teoremas 
+
+  Demostraremos que el mínimo del problema dual es igual al maximo del
+  problema primitivo.
+
